--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,26 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/networkNotice_tv"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="30dp"
+        android:layout_weight="1"
         android:background="#AE0000"
+        android:gravity="center"
         android:scaleType="centerInside"
-        android:text="目前無網路連線"
+        android:text=""
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:visibility="visible" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView">
+        android:layout_below="@+id/networkNotice_tv">
 
     </SearchView>
 
