--- a/app/src/main/res/layout/activity_drama_details.xml
+++ b/app/src/main/res/layout/activity_drama_details.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.bang.linetvdemo.DramaDetailsActivity"
     >
-
     <ImageView
         android:id="@+id/imageThumbDetails"
         android:layout_width="match_parent"
@@ -14,7 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="23dp"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        />
 
     <TextView
         android:id="@+id/textViewDetailsName"
